Fixed scrollbar issue in range component, added custom scrollbar styling to slider menu

--- a/src/components/ParticleMenu/ParticleMenu.scss
+++ b/src/components/ParticleMenu/ParticleMenu.scss
@@ -11,12 +11,18 @@
 
 	&__items {
 		height: 100%;
-		overflow-y: scroll;
-		-ms-overflow-style: none;
-		scrollbar-width: none;
+		overflow-y: auto;
 
 		&::-webkit-scrollbar {
-			display: none;
+			width: $space-s;
+		}
+
+		&::-webkit-scrollbar-track {
+			background-color: $gray-10;
+		}
+
+		&::-webkit-scrollbar-thumb {
+			background-color: $gray-7;
 		}
 	}
 
@@ -24,7 +30,6 @@
 		align-items: center;
 		background: $gray-10;
 		display: flex;
-		justify-content: space-between;
 		opacity: 0.75;
 		padding: $space-m $space-l;
 		transition: opacity $transition-duration-s;
