--- a/src/components/PlaylistMenu/PlaylistMenu.scss
+++ b/src/components/PlaylistMenu/PlaylistMenu.scss
@@ -27,14 +27,19 @@
 
 	&__list {
 		height: 100%;
-		overflow-y: scroll;
+		overflow-y: auto;
 
 		&::-webkit-scrollbar {
-			display: none;
+			width: $space-s;
 		}
 
-		-ms-overflow-style: none;
-		scrollbar-width: none;
+		&::-webkit-scrollbar-track {
+			background-color: $gray-10;
+		}
+
+		&::-webkit-scrollbar-thumb {
+			background-color: $gray-7;
+		}
 	}
 
 	&__add-label {
